Bug 1919423 - Check for null selected track when fulfilling rVFC. r=media-playback-reviewers,padenot

HTMLVideoElement's mSelectedVideoStreamTrack may be null when fulfilling
requestVideoFrameCallback requests. This can occur when we race tearing
down the current stream, while there are still frames in the
ImageContainer that reference it.

Differential Revision: https://phabricator.services.mozilla.com/D222570