dom/html/HTMLVideoElement.cpp
@@ -798,7 +798,7 @@ void HTMLVideoElement::TakeVideoFrameRequestCallbacks(
   // timestamps relative to an origin that is specific to the WebRTC session.
   bool hasCaptureTimeNtp = selected->mWebrtcCaptureTime.is<int64_t>();
   bool hasReceiveTimeReal = selected->mWebrtcReceiveTime.isSome();
-  if (hasCaptureTimeNtp || hasReceiveTimeReal) {
+  if (mSelectedVideoStreamTrack && (hasCaptureTimeNtp || hasReceiveTimeReal)) {
     if (const auto* timestampMaker =
             mSelectedVideoStreamTrack->GetTimestampMaker()) {
       if (hasCaptureTimeNtp) {
